# A-Look-to-the-Past

./: .ycm_extra_conf.py  CMakeLists.txt  Doxyfile  README.md  compile.ps1  imgui.ini
assets/: Descubiertos.json  Info.json  Quests.json  Tutorial.json  Tutorial.txt  TutorialCombate.txt  TutorialQuest.txt  TutorialVictoria.txt  Ubicaciones.json  d.json
assets/bestiario/: Bestiario.json
assets/config/: figuras.txt  figuras2.txt  imgui.ini
assets/mapas/: mapaPelea1_layer1.txt  mapaPelea1_layer2.txt  mapaPelea1_layer3.txt  mapaPelea1_layer4.txt  mapa_2_layer_1.txt  mapa_prueba.txt
assets/shaders/: dissolve.frag  imgui.ini  prueba.frag  pruebaVert.vert
assets/sprites_dinos/: Dinosaurios.txt
src/: CMakeLists.txt
src/Juego/: CMakeLists.txt  Juego.cpp  Juego.hpp
src/Juego/Componentes/: IJComponentes.cpp  IJComponentes.hpp  imgui.ini
src/Juego/Dinosaurios/: Dinosaurio.cpp  Dinosaurio.hpp  imgui.ini
src/Juego/Escenas/: EscenaBestiario.cpp  EscenaBestiario.hpp  EscenaCirculos.cpp  EscenaCirculos.hpp  EscenaCombate.cpp  EscenaCombate.hpp  EscenaCuadro.cpp  EscenaCuadro.hpp  EscenaDerrota.cpp  EscenaDerrota.hpp  EscenaFigura.hpp  EscenaFiguras.cpp  EscenaFosiles.cpp  EscenaFosiles.hpp  EscenaJefe.cpp  EscenaJefe.hpp  EscenaMejora.cpp  EscenaMejora.hpp  EscenaSeleccion.cpp  EscenaSeleccion.hpp  EscenaShaders.cpp  EscenaShaders.hpp  EscenaVictoria.cpp  EscenaVictoria.hpp  Escena_Menu.cpp  Escena_Menu.hpp  Escena_Zombie.cpp  Escena_Zombie.hpp  imgui.ini
src/Juego/Estados/: Estados.cpp  Estados.hpp
src/Juego/Figuras/: Figuras.cpp  Figuras.hpp
src/Juego/Habilidades/: Habilidad.cpp  Habilidad.hpp  imgui.ini
src/Juego/Maquinas/: AbrirFSM.cpp  AbrirFSM.hpp  AtaqueFSM.cpp  AtaqueFSM.hpp  BuffFSM.cpp  BuffFSM.hpp  CambiarPaginaFSM.cpp  CambiarPaginaFSM.hpp  CerrarFSM.cpp  CerrarFSM.hpp  DamageFSM.cpp  DamageFSM.hpp  FSM.hpp  IdleFSM.cpp  IdleFSM.hpp  MoverFSM.cpp  MoverFSM.hpp  MuerteFSM.cpp  MuerteFSM.hpp  SaltoFSM.cpp  SaltoFSM.hpp  imgui.ini
src/Juego/Objetos/: Entidad.cpp  Entidad.hpp  Equipos.cpp  Equipos.hpp  Jugador.cpp  Jugador.hpp  Log.cpp  Log.hpp  Pais.cpp  Pais.hpp  Periodos.hpp  QuestStates.hpp  Quests.cpp  Quests.hpp  Recompensas.cpp  Recompensas.hpp  Texto.cpp  Texto.hpp  TileMap.cpp  TileMap.hpp  imgui.ini
src/Juego/Sistemas/: Sistemas.cpp  Sistemas.hpp  SistemasIA.cpp  SistemasIA.hpp  SistemasJefes.cpp  SistemasJefes.hpp  imgui.ini
src/Main/: CMakeLists.txt  main.cpp
(+59 files in other folders)
